[package]
name = "bahn"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = "0.17.0"
chrono = "0.4.40"
dotenv = "0.15.0"
socket2 = { version = "0.5.9", features = ["all"] }
sqlite = "0.36.2"
tokio = { version = "1.44.1", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
